IndexedDB: deleteDatabase fails if transaction running in other database https://bugs.webkit.org/show_bug.cgi?id=90822

Reviewed by Tony Chang.

Source/WebCore:

The IDBLevelDBBackingStore was preventing a deleteDatabase() from running
if any other database was running a transaction. Fix by just creating a scratch
LevelDBTransaction for the delete steps.

Test: storage/indexeddb/deletedatabase-transaction.html

* Modules/indexeddb/IDBLevelDBBackingStore.cpp:
(WebCore::IDBLevelDBBackingStore::deleteDatabase): Use a LevelDBTransaction
directly.

LayoutTests:

* storage/indexeddb/deletedatabase-transaction-expected.txt: Added.
* storage/indexeddb/deletedatabase-transaction.html: Added.


Canonical link: https://commits.webkit.org/108671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122179 268f45cc-cd09-0410-ab3c-d52691b4dbfc